2015-08-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/67329
	* gcc.target/i386/pr67329.c: New test.

2015-08-24  Nathan Sidwell  <nathan@acm.org>

	* gcc/testsuite/gcc.dg/pr49551.c: Needs -fdata-sections.

	* gcc/testsuite/gcc.dg/pr64935-2.c: Needs scheduling.

	* gcc/testsuite/gcc.dg/torture/pr66101.c: Needs nonlocal goto.
	* gcc/testsuite/gcc.dg/torture/pr63738.c: Likewise.
	* gcc/testsuite/gcc.dg/torture/pr64728.c: Likewise.
	* gcc/testsuite/gcc.dg/pr63748.c: Likewise.
	* gcc/testsuite/gcc.dg/20020312-2.c: Likewise.

	* gcc/testsuite/gcc.dg/torture/pr66123.c: Needs label_values.

	* gcc/testsuite/gcc.dg/torture/pr41261.c: Needs profiling.
	* gcc/testsuite/gcc.dg/pr26570.c: Likewise.
	* gcc/testsuite/gcc.dg/pr61776.c: Likewise.
	* gcc/testsuite/gcc.dg/tree-ssa/ssa-lim-11.c: Likewise.
	* gcc/testsuite/gcc.dg/gomp/pr34610.c: Likewise.
	* gcc/testsuite/gcc.dg/pr54121.c: Likewise.
	* gcc/testsuite/gcc.dg/20050325-1.c: Likewise.
	* gcc/testsuite/gcc.dg/pr66899.c: Likewise.
	* gcc/testsuite/gcc.dg/pr48770.c: Likewise.
	* gcc/testsuite/gcc.dg/pr24225.c: Likewise.

	* gcc/testsuite/gcc.dg/pr27531-1.c: Needs io.
	* gcc/testsuite/gcc.dg/pr44606.c: Likewise.

	* gcc/testsuite/gcc.dg/tree-ssa/nonzero-1.c: Needs weak.

	* gcc/testsuite/gcc.dg/pr51990.c: Needs alloca.

	* gcc/testsuite/gcc.misc-tests/options.exp: Disable profiling
	check for nvptx.

2015-08-24  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/65468
	* gcc.dg/gomp/static-chunk-size-one.c: New test.

2015-08-23  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR libfortran/54572
	* gfortran.dg/backtrace_1.f90: New test.

2015-08-23  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR libfortran/62296
	* gfortran.dg/execute_command_line_2.f90: New test.

2015-08-23  Tom de Vries  <tom@codesourcery.com>

	* gcc.dg/vect/trapv-vect-reduc-4.c: Use vect_no_int_min_max.
	* gcc.dg/vect/costmodel/i386/costmodel-vect-reduc-1char.c: Rename
	vect_no_int_max to vect_no_int_min_max.